continuous grab causes jumping behavior of mouse cursor while adjusting values in sliders #46306

Closed
opened 2015-09-28 19:11:42 +02:00 by Bubble Bobble · 11 comments

System Information
Windows 7, NVIDIA Quadro 1000m

Blender Version
Broken: 2.75 RC c586e30
Worked:

Short description of error

If you click on a the right side of a value slider while the cursor is moving at all, the cursor jumps to the left side of the slider. Sometimes it adjusts the value as well as enabling you to type in a value. Sometimes while adjusting nodes in the node editor, clicking the slider to edit the value numerically will work, but the cursor will have popped to the left and sit on top of the numbers. It occasionally drags values in an undesirable way before snapping over, which is undesirable in itself.

Exact steps for others to reproduce the error

  1. open the blend file here slider_pop_error.blend and click around on the areas highlighted here 000466-09-27-15 09_30_13.png
  2. observe that the cursor will occasionally snap to the left side of the slider.

Note: I downloaded 2.75 to check and this happens there too. Just wanted to mention that I never knew about continuous grab until recently, and enabled it shortly before the first 2.76 release candidate. Apologies if this is a dud but this isn't very desirable behavior. Continuous grab is an amazing feature for which I am grateful (thanks to whoever thought that up!!!), and this seems to happen only while it is enabled. Apologies if it seems like I'm trying to have cake and eat it too, but this has been driving me batty since I enabled continuous grab.

**System Information** Windows 7, NVIDIA Quadro 1000m **Blender Version** Broken: 2.75 RC c586e30 Worked: **Short description of error** If you click on a the right side of a value slider while the cursor is moving at all, the cursor jumps to the left side of the slider. Sometimes it adjusts the value as well as enabling you to type in a value. Sometimes while adjusting nodes in the node editor, clicking the slider to edit the value numerically will work, but the cursor will have popped to the left and sit on top of the numbers. It occasionally drags values in an undesirable way before snapping over, which is undesirable in itself. **Exact steps for others to reproduce the error** 1) open the blend file here [slider_pop_error.blend](https://archive.blender.org/developer/F240079/slider_pop_error.blend) and click around on the areas highlighted here ![000466-09-27-15 09_30_13.png](https://archive.blender.org/developer/F240074/000466-09-27-15_09_30_13.png) 2) observe that the cursor will occasionally snap to the left side of the slider. Note: I downloaded 2.75 to check and this happens there too. Just wanted to mention that I never knew about continuous grab until recently, and enabled it shortly before the first 2.76 release candidate. Apologies if this is a dud but this isn't very desirable behavior. Continuous grab is an amazing feature for which I am grateful (thanks to whoever thought that up!!!), and this seems to happen only while it is enabled. Apologies if it seems like I'm trying to have cake and eat it too, but this has been driving me batty since I enabled continuous grab.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JimCantley

Added subscriber: @JimCantley
Author

Anyone know how I can edit? Wanted to straighten up some things in this report but when I click "edit task" it says

You do not have permission to edit this object.
Users with the "Can Edit" capability:

Members of the project "Moderators" can take this action.
The owner of a task can always view and edit it.

I seem able to edit comments OK.

Anyone know how I can edit? Wanted to straighten up some things in this report but when I click "edit task" it says **You do not have permission to edit this object.** Users with the "Can Edit" capability: Members of the project "Moderators" can take this action. The owner of a task can always view and edit it. I seem able to edit comments OK.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note that this may be a duplicate of #44605

Even though its not identical, it may be the same root cause.

Note that this may be a duplicate of #44605 Even though its not identical, it may be the same root cause.

This issue was referenced by 491b1899de

This issue was referenced by 491b1899de1716bcc0c9f0a5fb6d93b701b64784
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Committed fix for the issue where the cursor is re-positioned to inner value indicator even though text editing was started (491b1899de). Also, number slider buttons now have a 3 px threshold before dragging is started (32365bb06c), just like it's done for normal number buttons.

I personally also don't really like that we set the cursor to the inner value indicator after dragging. It's a bit annoying if you start dragging from the right and the cursor reappears on the far left, but this shouldn't be discussed here.

Committed fix for the issue where the cursor is re-positioned to inner value indicator even though text editing was started (491b1899de). Also, number slider buttons now have a 3 px threshold before dragging is started (32365bb06c), just like it's done for normal number buttons. I personally also don't really like that we set the cursor to the inner value indicator after dragging. It's a bit annoying if you start dragging from the right and the cursor reappears on the far left, but this shouldn't be discussed here.

I personally also don't really like that we set the cursor to the inner value indicator after dragging. It's a bit annoying if you start dragging from the right and the cursor reappears on the far left, but this shouldn't be discussed here.

This sounds like a bug, and almost certain this was never intended behavior.

Testing here and the cursor isn't warping when dragging numbers.
In what situation does this happen?

> I personally also don't really like that we set the cursor to the inner value indicator after dragging. It's a bit annoying if you start dragging from the right and the cursor reappears on the far left, but this shouldn't be discussed here. This sounds like a bug, and almost certain this was never intended behavior. Testing here and the cursor isn't warping when dragging numbers. In what situation does this happen?
Author

It happens for me any time at all when the mouse is moving and you're adjusting a slider without arrows on the sides (see sliders in screenshot); the cursor jumps/warps over to the left of the slider. It only happens when continuous grab is enabled, like it makes its own continuous grab area inside the area of a slider (guessing here and don't want to lead anyone astray but depending on how long you drag, it changes the position of the cursor, like if you drag it a small bit, it resets farther to the left in the slider).

It only seems to happen on sliders without arrows, like strength of a bump node. And the lower the value in the slider, the bigger the warp seems to be! If the strength in bump node, is at like .01 for example, and you slide, it warps farther to the left. If the strength is at .999 it doesn't really warp. Quite odd but that's what I'm experiencing.

  • I downloaded RC3 and it seems like the issue of clicking to enter a number and the cursor jumping has been resolved.. I think... :P Seemed to be a couple of things going on. Thanks again severin.

  • Oooh yeah, that's nice. And thanks to whoever made it so that we can slide at thousands place of decimals. That's incredible!

Hmm, seems that you can only adjust decimals to the thousands in sliders without arrows. I really miss being able to do that, that is such a helpful feature. As a casual request, any chance to plop that functionality into other sliders? Quite often I find myself manually entering .001, no OK, .002, no OK :(

It happens for me any time at all when the mouse is moving and you're adjusting a slider without arrows on the sides (see sliders in screenshot); the cursor jumps/warps over to the left of the slider. It only happens when continuous grab is enabled, like it makes its own continuous grab area inside the area of a slider (guessing here and don't want to lead anyone astray but depending on how long you drag, it changes the position of the cursor, like if you drag it a small bit, it resets farther to the left in the slider). It only seems to happen on sliders without arrows, like strength of a bump node. And the lower the value in the slider, the bigger the warp seems to be! If the strength in bump node, is at like .01 for example, and you slide, it warps farther to the left. If the strength is at .999 it doesn't really warp. Quite odd but that's what I'm experiencing. - I downloaded RC3 and it seems like the issue of clicking to enter a number and the cursor jumping has been resolved.. I *think*... :P Seemed to be a couple of things going on. Thanks again severin. - Oooh yeah, that's nice. And thanks to whoever made it so that we can slide at thousands place of decimals. That's incredible! Hmm, seems that you can only adjust decimals to the thousands in sliders without arrows. I really miss being able to do that, that is such a helpful feature. As a casual request, any chance to plop that functionality into other sliders? Quite often I find myself manually entering .001, no OK, .002, no OK :(
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46306
No description provided.